# vehu-docker-dev

./: .dockerignore  .gitignore  ARCHIVED.md  CLAUDE.md  Dockerfile  GUIDE.md  Makefile  docker-compose.yml  fileman-analysis-guide.md  fm-python-guide.md  pyproject.toml  vehu-docker-config-check.sh  vehu-docker-vscode-setup-guide.md  vscode-setup-guide.md
.devcontainer/: devcontainer.json
notebooks/: fileman_analysis.ipynb
output/phase1/: ASSUMPTIONS-AUDIT.md  DOWNSTREAM-RULES.md  files.csv  inventory.json  packages.csv  phase1-planning-guide.md  phase1-scope-report.md  summary.json  type_distribution.csv  type_modifiers.csv
output/phase1_5/: attribution_candidates.csv  attribution_summary.json  phase1_5-attribution-report.md
output/phase1_6/: freetext_candidates.csv  freetext_summary.json  phase1_6-freetext-report.md
output/phase2/: ASSUMPTIONS-AUDIT.md  file_volume.csv  file_volume.json  phase2-planning-guide.md  phase2-volume-report.md  summary.json
output/phase3/: hub_files.csv  phase3-topology-report.md  phase3_pointer_graph.dot  pointer_graph.csv  pointer_graph.json  summary.json
output/phase4/: canonical_positions.json  label_frequency.csv  label_type_inconsistency.csv  (+3 more)
scripts/: probe_broker.py  probe_broker2.py  probe_broker3.py  probe_broker4.py  setup-container.sh  test_avcode.m  to_treemap.py  viz_library.py
tests/: conftest.py  test_attribution.py  test_connection.py  test_data_dictionary.py  test_exporter.py  test_file_reader.py  test_fm_datetime.py  test_inventory.py  test_rpc_broker.py  test_type_codes.py  test_vista_fm_browser.py
(+58 files in other folders)
